<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 Eugen Rădulescu <synapticwebb@gmail.com>
  ~ This file is part of the CipherPass project ( https://github.com/synapticweb/CipherPass ).
  ~ See the LICENSE file in the project root for license terms.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="net.synapticweb.cipherpass.authenticate.AuthenticateViewModel" />
    </data>

    <!-- https://android.jlelse.eu/scrolling-behavior-for-appbars-in-android-41aff9c5c468
    https://www.journaldev.com/13927/android-collapsingtoolbarlayout-example-->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                android:id="@+id/ct_layout"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/appbar_image"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/toolbar_bg"
                    app:layout_collapseMode="parallax"
                    />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/auth_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="4dp"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
            android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pass_notset_caption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:text="@string/pass_notset_caption"
                android:visibility="@{viewModel.passSet ? View.GONE : View.VISIBLE}" />

            <!-- https://stackoverflow.com/questions/3685790/how-to-switch-between-hide-and-view-password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_layout"
                app:theme="@style/authenticateTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/passphrase_hint"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passphrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                app:theme="@style/authenticateTheme"
                android:id="@+id/passphrase_retype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/passphrase_retype_hint"
                android:hint="@string/passphrase_retype_hint"
                android:inputType="textPassword"
                android:visibility="@{viewModel.passSet ? View.GONE : View.VISIBLE}" />

            <ProgressBar
                android:theme="@style/authenticateTheme"
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:indeterminate="true"
                android:maxWidth="50dp"
                android:minHeight="50dp"
                android:visibility="@{viewModel.working ? View.VISIBLE : View.GONE}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:cornerRadius="8dp"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp"
                android:id="@+id/send_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:enabled="@{viewModel.working ? false : true}"
                android:text="@{viewModel.passSet ? @string/pass_set_send_pass : @string/pass_not_set_send_pass}"
                android:textColor="@color/colorPrimary"
                />

            <ImageView
                android:id="@+id/system_auth"
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:scaleType="centerCrop"
                android:layout_height="50dp"
                android:src="@drawable/fingerprint"
                android:layout_gravity="center_horizontal"
                android:visibility="@{viewModel.applockPref.equals(`system`) ? View.VISIBLE : View.GONE}" />

        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>